--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       type="text/css"
       href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css"
     />
-    <title>Document</title>
+    <title>Mascotas Perdidas</title>
   </head>
   <body>
     <div id="root"></div>
